--- a/dummy_agent_library.ipynb
+++ b/dummy_agent_library.ipynb
@@ -17,7 +17,7 @@
         "id": "fr8fVR1J_SdU"
       },
       "source": [
-        "# Dummy Agent Library\n",
+        "# Clod's Dummy Agent Library\n",
         "\n",
         "In this simple example, **we're going to code an Agent from scratch**.\n",
         "\n",
